--- a/static/ui.html
+++ b/static/ui.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="""""he" dir="""""rtl"></html>
+<html lang="he" dir="rtl"></html>
 
 </html>
 
@@ -29,7 +29,7 @@
   <!-- Question Input Area -->
   <div class="flex justify-center mb-6 rtl">
     <div class="w-1/3">
-      <label for="question" class="block text-gray-700 font-medium mb-2 text-right">
+      <label for="question" class="block text-gray-700 font-medium mb-2">
         שאלה בעברית או באנגלית
       </label>
 
